--- a/Landing-Page/index.html
+++ b/Landing-Page/index.html
@@ -12,10 +12,11 @@
   </head>
   <body>
     <div class="container">
+
       <nav>
         <div class="logo">
           <i class="fa-solid fa-store"></i>
-          <h1>Store</h1>
+          <h1>élégant</h1>
         </div>
 
         <ul>
@@ -27,6 +28,7 @@
             <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
           </li>
         </ul>
+
       </nav>
 
       <div class="content">
@@ -57,10 +59,10 @@
 
     <script>
       let bigImage = document.getElementById("big-img");
-
       function myTshirt(shirt) {
         bigImage.src = shirt;
       }
     </script>
+
   </body>
 </html>
